# on-the-record

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: on-the-record-default.agent.md
macos/OnTheRecordMenuBar/: Info.plist  Package.swift
macos/OnTheRecordMenuBar/Sources/OnTheRecordMenuBar/: AppDelegate.swift  EngineProcess.swift  KeychainStore.swift  SettingsWindowController.swift
scripts/: build_macos_app.sh  build_windows_exe.py
src/on_the_record/: __init__.py  __main__.py  app_engine.py  audio.py  cli.py  config.py  macos_audio.py  obsidian.py  recording.py  speaker_recognition.py  study.py  transcribe.py  writer.py
tests/: test_app_engine.py  test_audio.py  test_build_windows_exe.py  test_cli.py  test_config.py  test_obsidian.py  test_recording.py  test_speaker_recognition.py  test_study.py  test_transcribe.py  test_writer.py
