[project]
name = "on-the-record"
version = "0.1.0"
description = "CLI tool that captures system audio and transcribes it with speaker diarization using OpenAI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "soundcard>=0.4.3",
    "numpy>=1.24.0",
    "openai>=1.30.0",
    "pyobjc-framework-ScreenCaptureKit>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-CoreMedia>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
speaker = [
    "speechbrain>=1.0.0; python_version < '3.13'",
    "torch>=2.0.0; python_version < '3.13'",
]

[project.scripts]
on-the-record = "on_the_record.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/on_the_record"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
build = [
    "pyinstaller>=6.16.0",
]
